--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/express-fileupload": "^1.1.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6",
+    "express-fileupload": "^1.2.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
   "scripts": {
     "start": "nodemon ./src/server.ts",
     "build": "tsc"
