--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/cors": "^2.8.8",
     "@types/multer": "^1.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "ts-node": "^9.0.0",
