--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "@types/cors": "^2.8.8",
     "@types/file-type": "^10.9.1",
+    "@types/mongoose": "^5.10.1",
     "@types/multer": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-type": "^16.0.1",
-    "mongoose": "^5.10.14",
+    "mongoose": "^5.10.16",
     "multer": "^1.4.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
